added front end and password reset
